# conversationalAI

./: .gitignore  README.md  SETUP.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  audit.py  catalog.py  config_store.py  dispatcher.py  orchestrator.py  registry.py  secrets.py  tools.py  webhook.py
backend/app/agent/builtin/: __init__.py  knowledge.py
backend/app/api/: auth.py  businesses.py  chat.py  documents.py  platform.py  tools.py
backend/app/auth/: context.py  firebase.py  middleware.py
backend/app/db/: firestore.py  models.py
backend/app/llm/: vertex.py
backend/app/rag/: client.py  data_store.py  ingest.py  retrieve.py
frontend/: .env.example  .firebaserc  README.md  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/models/: README.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AdminLayout.tsx  AuthLayout.tsx  Button.tsx  Input.tsx  Logo.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/src/components/avatar/: AvatarErrorBoundary.tsx  AvatarModel.tsx  (+2 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  CreateBusiness.tsx  Knowledge.tsx  Login.tsx  Platform.tsx  Settings.tsx  Signup.tsx  Team.tsx  Tools.tsx
scripts/: bootstrap.ps1  deploy-backend.ps1  deploy-frontend.ps1  promote_platform_admin.py  setup-github.ps1  teardown.ps1
